2005-05-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdashpattern.[ch]
	* app/widgets/gimpdasheditor.c: moved code out of GimpDashEditor
	to gimpdashpattern.c.

2005-05-19  Michael Natterer  <mitch@gimp.org>

	* plug-ins/dbbrowser/Makefile.am
	* plug-ins/dbbrowser/gimpbrowser.[ch]: removed again...

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetsmarshal.list
	* libgimpwidgets/gimpwidgets.def
	* libgimpwidgets/gimpbrowser.[ch]: ...and added here.

	* plug-ins/dbbrowser/gimpprocbrowser.c
	* plug-ins/dbbrowser/plugin-browser.c: changed accordingly.

	* plug-ins/dbbrowser/gimpprocbrowser.c: fixed searching by help.

2005-05-19  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdasheditor.c: use code from gimpdashpattern.c
	instead of duplicating it.

2005-05-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdashpattern.[ch]
	* app/core/gimpstrokeoptions.c: moved more code to the new files.

2005-05-19  Sven Neumann  <sven@gimp.org>

	* app/core/Makefile.am
	* app/core/gimpdashpattern.[ch]: new files with code split out of
	gimpstrokeoptions.c.

	* app/core/gimpstrokeoptions.c: use gimp_dash_pattern_from_preset().

2005-05-19  Michael Natterer  <mitch@gimp.org>

	* tools/test-clipboard.c: don't allow copy and paste at the same
	time, fixed exit codes.

2005-05-19  Michael Natterer  <mitch@gimp.org>

	* plug-ins/dbbrowser/Makefile.am
	* plug-ins/dbbrowser/gimpprocbox.[ch]: removed.

	* plug-ins/dbbrowser/gimpbrowser.[ch]: new widget derived from
	GtkHPaned. Contains lots of common code from the procedure and
	plug-in browsers.

	* plug-ins/dbbrowser/gimpprocbrowser.c
	* plug-ins/dbbrowser/plugin-browser.c: use a GimpBrowser, lots of
	cleanups.

	* plug-ins/dbbrowser/gimpprocbrowser.c: support all possible search
	types. Addresses bug #301201.

2005-05-18  Sven Neumann  <sven@gimp.org>

	* app/actions/file-commands.c (file_open_dialog_show): set the